# openscada-old

./: .gitignore  ChangeLog  configure.ac  source-format.cfg
src/: resalloc.cpp  resalloc.h  tmess.cpp  tmess.h  tsecurity.cpp  tsys.cpp  tsys.h
src/moduls/daq/FT3/: ACCOUNT.cpp  ACCOUNT.h  BIP.cpp  BIP.h  BTE.cpp  BTE.h  BTR.cpp  BTR.h  BTU.cpp  BTU.h  BUC.cpp  BUC.h  BVI.cpp  BVI.h  BVT.cpp  BVT.h  BVTC.cpp  BVTC.h  FT3_prt.cpp  FT3_prt.h  GKR.cpp  GKR.h  GNS.cpp  GNS.h  GZD.cpp  GZD.h  Makefile.am  ODOR.cpp  ODOR.h  PAUK.cpp  PAUK.h  SUB.cpp  SUB.h  TANK.cpp  TANK.h  UPZ.cpp  UPZ.h  UTHET.cpp  UTHET.h  da.cpp  (+4 more)
src/moduls/daq/FT3/po/: oscd_FT3.pot  ru.po
src/moduls/daq/Fastwel/: module.cpp
src/moduls/daq/Fastwell/: Makefile.am  module.cpp  module.h
src/moduls/daq/MSO/: MSOparam.cpp  MSOparam.h  Makefile.am  MezTC.cpp  MezTC.h  MezTI.cpp  MezTI.h  MezTR.cpp  MezTR.h  MezTT.cpp  MezTT.h  MezTU.cpp  MezTU.h  da.h  moduls.cpp  mso_daq.cpp  mso_daq.h  mso_prt.cpp  mso_prt.h
src/moduls/daq/SET4TM/: Makefile.am  module.cpp  module.h
src/moduls/daq/SET4TM/po/: ru.po
src/moduls/daq/System/: da.h
src/moduls/special/FLibSYS/: varchfnc.cpp
src/moduls/transport/Sockets/: socket.cpp  socket.h
src/moduls/transport/Sockets/po/: ru.po
src/moduls/ui/QTStarter/: tuimod.cpp
src/moduls/ui/Vision/: tvision.cpp  vis_run.cpp  vis_run_widgs.cpp
src_call/: main.cpp
